--- a/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -121,6 +122,22 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="591.33333333333337" width="388" height="256.66666666666663"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="iIc-1P-Yp8">
+                                                <rect key="frame" x="0.0" y="126" width="388" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="5NT-D6-DhH"/>
+                                                </constraints>
+                                                <color key="progressTintColor" systemColor="systemYellowColor"/>
+                                                <color key="trackTintColor" systemColor="systemGray2Color"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="iIc-1P-Yp8" secondAttribute="trailing" id="5pX-FJ-kVJ"/>
+                                            <constraint firstItem="iIc-1P-Yp8" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="CV0-vn-Dud"/>
+                                            <constraint firstItem="iIc-1P-Yp8" firstAttribute="centerX" secondItem="nJN-th-c5K" secondAttribute="centerX" id="Ww2-oN-61b"/>
+                                            <constraint firstItem="iIc-1P-Yp8" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" id="ngk-of-dsh"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -135,6 +152,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="progressBar" destination="iIc-1P-Yp8" id="rs6-as-qr2"/>
                         <outlet property="titleLabel" destination="XLm-5r-pSP" id="FoB-DU-xWU"/>
                     </connections>
                 </viewController>
@@ -147,5 +165,11 @@
         <image name="hard_egg" width="287.66665649414062" height="366.33334350585938"/>
         <image name="medium_egg" width="288" height="363.33334350585938"/>
         <image name="soft_egg" width="287" height="365.33334350585938"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
